@@ -90,7 +90,13 @@ if [[ ! $COMMAND ]] || [[ ! $KERNEL_VERSION ]]; then
     exit 1
 fi
 
+# Prefer to use an existing machine ID from /etc/machine-info or /etc/machine-id. Otherwise, try to generate
+# a new machine ID in /etc/machine-info. If that fails, use "Default".
+
+[ -z "$MACHINE_ID" ] && [ -f /etc/machine-info ] && MACHINE_ID="$(source /etc/machine-info && echo $KERNEL_INSTALL_MACHINE_ID)"
 [ -z "$MACHINE_ID" ] && [ -f /etc/machine-id ] && [ "$(stat -fc %T /etc/machine-id)" != "tmpfs" ] && read -r MACHINE_ID < /etc/machine-id
+[ -z "$MACHINE_ID" ] && "KERNEL_INSTALL_MACHINE_ID=$(systemd-id128 new)" >> /etc/machine-info
+[ -z "$MACHINE_ID" ] && [ -f /etc/machine-info ] && MACHINE_ID="$(source /etc/machine-info && echo $KERNEL_INSTALL_MACHINE_ID)"
 [ -z "$MACHINE_ID" ] && MACHINE_ID="Default"
 
 [ -z "$BOOT_ROOT" ] && for suff in "$MACHINE_ID" "Default" "loader/entries"; do
